--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,12 +24,7 @@ body{
 
 header {
   background-color: #037394;
-  width: 100%;
-  height: auto;
   border-bottom: solid 2px;
-  top: 0;
-  left: 0;
-  font-size: 3rem;
 }
 
 .container{
@@ -38,17 +33,12 @@ header {
 }
 
 .icons{
- color:#F7F7F7;
+  color:#F7F7F7;
   text-decoration: none;
-
-}
-
-.icon{
-  margin-left: 75px;
+  font-size: 1.6rem;
 }
 
 .link{
-  text-align: center;
   font-size: 20px;
   color: #F7F7F7;
   text-decoration: none;
@@ -68,3 +58,23 @@ header {
   top: 8px;
 }
 
+// メッセージ一覧
+#message-container {
+  max-width: 768px;
+  margin: 0 auto;
+  padding: 1rem 1rem 8rem 1rem;
+}
+
+// メッセージ投稿フォーム
+footer {
+  max-width: 768px;
+  padding: 1rem;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.user_icon{
+  border: solid 2px;
+  border-radius: 50%;
+  width: 100px;
+}
