--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,123 +5,146 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <main>
-
-<div class="profile">　　                                                  <!--my profile&name表示-->
-  <%= image_tag 'top_icon.png',class:'example1' %>　
-  <%= current_user.name %>
-  <%= current_user.nickname %>
-  (@<%= current_user.userid %>)
-</div>
-
-<div class="row ">
-<div class="col-md-6" style="background: white; height: 650px;">            <!--左画面の作成-->
-<br>
-  <div class="page-header" style="text-align: center">                      <!--帯作成-->
-    <h1>友だち</h1>
+  <div class="profile">　　                                                  <!--my profile&name表示-->
+    <%= image_tag 'top_icon.png',class:'example1' %>　
+    <%= current_user.name %>
+    <%= current_user.nickname %>
+    (@<%= current_user.userid %>)
   </div>
 
-  <hr class="style" style="border-top: 1px solid #8c8b8b">
-
-  <form id="form1" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
-    <input id="sbox1" id="s" name="s" type="text" placeholder="友達を検索" />
-    <input id="sbtn1" type="submit" value="検索" /></form>
-
-
-  <button
-    type="button"
-    class="btn btn-secondary btn-lg w-100 mt-2"
-    data-toggle="collapse"
-    data-target="#collapseExample1"
-    aria-expanded="false"
-    aria-controls="collapseExample1"
-  >
-    お気に入り
-  </button>
-  <!-- /トリガーとなるリンク&ボタン -->
-
-  <!-- 対象のコンテンツ -->
-  <div class="collapse show" id="collapseExample1">
+  <div class="row">
+    <div class="col-md-6" style="background: white; height: 650px;">            <!--左画面の作成-->
     <br>
-      <%= image_tag 'top_icon.png',class:'example1' %>　
-      <span>須山　龍</span>
-      <span>(ニックネーム)</span>
-  </div>
+      <div class="page-header" style="text-align: center">                      <!--帯作成-->
+        <h1>友だち</h1>
+      </div>
 
-  <button
-    type="button"
-    class="btn btn-secondary btn-lg w-100 mt-2"
-    data-toggle="collapse"
-    data-target="#collapseExample2"
-    aria-expanded="false"
-    aria-controls="collapseExample2"
-  >
-    友達
-  </button>
-  <!-- /トリガーとなるリンク&ボタン -->
+      <hr class="style" style="border-top: 1px solid #8c8b8b">
 
-  <!-- 対象のコンテンツ -->
-  <div class="collapse show" id="collapseExample2" >
-    <% @mates.each do |user| %>　
-      <br>
-      <%= image_tag 'top_icon.png',class:'example1' %>　
-      <%= user.name %>
-      (<%= user.nickname %>)
-      <%=user.id %>
-      <%= link_to "favorite_button"  ,edit_page_path(user.id), method: :post %>
-      <% end %>
+      <form id="form1" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
+        <input id="sbox1" id="s" name="s" type="text" placeholder="友達を検索" />
+        <input id="sbtn1" type="submit" value="検索" /></form>
+
+
+      <button
+        type="button"
+        class="btn btn-secondary btn-lg w-100 mt-2"
+        data-toggle="collapse"
+        data-target="#collapseExample1"
+        aria-expanded="false"
+        aria-controls="collapseExample1">
+        お気に入り
+      </button>
+      <!-- /トリガーとなるリンク&ボタン -->
+
+      <!-- 対象のコンテンツ -->
+      <div class="collapse show " id="collapseExample1">
+        <% @mates.each do |user| %>
+
+          <% unless current_user.is_favorite?(user.id) == false %>
+           <%= image_tag 'top_icon.png',class:'example1' %>
+            <%= user.name %>
+            <%= user.nickname %>
+
+            <div class="float-end" style="border: solid 1px">
+            <% if current_user.is_favorite?(user.id) %>
+              <%= link_to page_favorite_path(user.id,current_user.id), method: :delete do %>
+                <i class="fas fa-star"></i>
+
+              <% end %>
+            <% else %>
+              <%= link_to  page_favorite_index_path(user.id), method: :post do %>
+                <i class="far fa-star"></i>
+              <% end %>
+            <% end %>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+
+      <button
+        type="button"
+        class="btn btn-secondary btn-lg w-100 mt-2"
+        data-toggle="collapse"
+        data-target="#collapseExample2"
+        aria-expanded="false"
+        aria-controls="collapseExample2"
+      >
+        友達
+      </button>
+      <!-- /トリガーとなるリンク&ボタン -->
+
+      <!-- 対象のコンテンツ -->
+      <div class="collapse show" id="collapseExample2" style= "border:solid 1px">
+        <% @mates.each do |user| %>　
+          <%= image_tag 'top_icon.png',class:'example1' %>　
+          <%= user.name %>
+          (<%= user.nickname %>)
+          <span style= "float: right;">
+          <% if current_user.is_favorite?(user.id) %>
+            <%= link_to page_favorite_path(user.id,current_user.id), method: :delete  do %>
+              <i class="fas fa-star"></i>
+            <% end %>
+          <% else %>
+            <%= link_to  page_favorite_index_path(user.id),class:"text-right", method: :post do %>
+              <i class="far fa-star"></i>
+            <% end %>
+        <% end %>
+          </span>
+       <% end %>
+      </div>
     </div>
+                                                                      <!--左画面の作成ここまで-->
+
+    <div class="col-md-6" style="background: white; height: 650px;">　
+     <br>
+
+      <div class="page-header" style="text-align: center">                      <!--帯作成-->
+        <h1>コミュニティ</h1>
+      </div>
+
+      <hr class="style" style="border-top: 1px solid #8c8b8b">
+
+      <form id="form2" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
+        <input id="sbox1" id="s" name="s" type="text" placeholder="グループを検索" />
+        <input id="sbtn1" type="submit" value="検索" /></form>
+
+      <button
+        type="button"
+        class="btn btn-secondary btn-lg w-100 mt-2"
+        data-toggle="collapse"
+        data-target="#collapseExample3"
+        aria-expanded="false"
+        aria-controls="collapseExample3"
+      >
+        お気に入り
+      </button>
+      <!-- /トリガーとなるリンク&ボタン -->
+
+      <!-- 対象のコンテンツ -->
+      <div class="collapse show" id="collapseExample3">
+        <%= image_tag 'top_icon.png',class:'example1' %>　
+        <span>とある愛好家</span>
+      </div>
+
+      <button
+        type="button"
+        class="btn btn-secondary btn-lg w-100 mt-2"
+        data-toggle="collapse"
+        data-target="#collapseExample3"
+        aria-expanded="false"
+        aria-controls="collapseExample3"
+      >
+        コミュニティ
+      </button>
+      <!-- /トリガーとなるリンク&ボタン -->
+
+      <!-- 対象のコンテンツ -->
+      <div class="collapse show" id="collapseExample4" >
+        <br>
+        <%= image_tag 'top_icon.png',class:'example1' %>　
+        <span>　東京卍会</span>
+      </div>
+    </div>     <!--右画面制作-->
   </div>
-                                                                    <!--左画面の作成ここまで-->
-
-<div class="col-md-6" style="background: white; height: 650px;">　
- <br>
-
-  <div class="page-header" style="text-align: center">                      <!--帯作成-->
-    <h1>コミュニティ</h1>
-  </div>
-
-  <hr class="style" style="border-top: 1px solid #8c8b8b">
-
-  <form id="form2" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
-    <input id="sbox1" id="s" name="s" type="text" placeholder="グループを検索" />
-    <input id="sbtn1" type="submit" value="検索" /></form>
-
-  <button
-    type="button"
-    class="btn btn-secondary btn-lg w-100 mt-2"
-    data-toggle="collapse"
-    data-target="#collapseExample3"
-    aria-expanded="false"
-    aria-controls="collapseExample3"
-  >
-    お気に入り
-  </button>
-  <!-- /トリガーとなるリンク&ボタン -->
-
-  <!-- 対象のコンテンツ -->
-  <div class="collapse show" id="collapseExample3">
-    <br>
-    <%= image_tag 'top_icon.png',class:'example1' %>　
-    <span>とある愛好家</span>
-  </div>
-
-  <button
-    type="button"
-    class="btn btn-secondary btn-lg w-100 mt-2"
-    data-toggle="collapse"
-    data-target="#collapseExample3"
-    aria-expanded="false"
-    aria-controls="collapseExample3"
-  >
-    コミュニティ
-  </button>
-  <!-- /トリガーとなるリンク&ボタン -->
-
-  <!-- 対象のコンテンツ -->
-  <div class="collapse show" id="collapseExample4" >
-    <%= image_tag 'top_icon.png',class:'example1' %>　
-    <span>　東京卍会</span>
-  </div>
-</div>     <!--右画面制作-->
-</div>
 </main>
