--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -18,8 +18,8 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">Amica</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
+          <h3 class="float-md-start mb-0" style="color: #037394;">Amica</h3>
+          <nav class="nav nav-masthead　bg-blue justify-content-center float-md-end">
             <a class="nav-link" aria-current="page" href="/">ホーム</a>
             <a class="nav-link" href="<%= about_path %>">Amicaについて</a>
             <a class="nav-link" href="<%= contact_path %>">お問い合わせ</a>
