--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,29 +13,28 @@
  *= require_self
  */
 
-
-
 html{
   font-family: 'Kiwi Maru', serif;
 }
 
 body{
   margin: 0;
- }
+}
 
 
 header {
-  background-color: #037394;
+  background-color: #00A1AE;
   border-bottom: solid 2px;
 }
 
 
 .icons{
-  font-size: 1.6rem;
+  font-size: 1.4rem;
+  margin-left: 7px;
 }
 
 .link{
- color: #212529;
+  color: #212529;
   text-decoration: none;
 }
 
@@ -46,16 +45,26 @@ header {
 .default_icon{
   background-color: #FFFFFF;
   border: solid 2px;
-  border-radius: 50%;
-  width: 60px;
+  border-radius: 30%;
+  width: 45px;
 }
-
 
 .user_icon{
+  background: #FFF;
   border: solid 2px;
-  border-radius: 50%;
-    width: 60px;
+  border-radius: 30%;
+  width: 45px;
+  margin-left: 7px;
 }
+
 .name{
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+}
+
+.user_id{
+  font-size: 0.9rem;
+}
+
+table{
+  margin-left: 7px;
 }
