コミュニティ編集機能の実装

--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -23,7 +23,7 @@
                 </div>
                 <div class="card">
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><%= community.tag %></li>
+                    <li class="list-group-item">a</li>
                     <li class="list-group-item">Dapibus ac facilisis in</li>
                     <li class="list-group-item">Vestibulum at eros</li>
                   </ul>
