--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -16,6 +16,10 @@
 
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">友達 (<%= @friends.count %>)</h6>
+    <% if @friends[0] == nil %>
+      <br>
+      <p class="text-gray-dark">友達がいないようです！</p>
+    <% end %>
     <% @friends.first(10).each do |user| %>
       <%= link_to profile_path(user.userid) do %>
         <div class="d-flex text-muted pt-3">
@@ -31,13 +35,19 @@
         </div>
       <% end %>
     <% end %>
-    <small class="d-block text-end mt-3">
-      <%= link_to "すべて表示",profile_friends_path %>
-    </small>
+    <% if @friends[0] != nil %>
+      <small class="d-block text-end mt-3">
+        <%= link_to "すべて表示",profile_friends_path %>
+      </small>
+    <% end %>
   </div>
 
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">フォローリスト (<%= @following.count %>)</h6>
+    <% if @following[0] == nil %>
+      <br>
+      <p class="text-gray-dark">現在はいないようです！</p>
+    <% end %>
     <% @following.first(5).each do |user| %>
       <%= link_to profile_path(user.userid) do %>
         <div class="d-flex text-muted pt-3">
@@ -53,13 +63,19 @@
         </div>
       <% end %>
     <% end %>
-    <small class="d-block text-end mt-3">
-      <%= link_to "すべて表示",profile_follow_path %>
-    </small>
+    <% if @following[0] != nil %>
+      <small class="d-block text-end mt-3">
+        <%= link_to "すべて表示",profile_follow_path %>
+      </small>
+    <% end %>
   </div>
 
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">フォロワーリスト (<%= @follower.count %>)</h6>
+    <% if @follower[0] == nil%>
+      <br>
+      <p class="text-gray-dark">現在はいないようです！</p>
+    <% end %>
     <% @follower.first(5).each do |user| %>
       <%= link_to profile_path(user.userid) do %>
         <div class="d-flex text-muted pt-3">
@@ -75,18 +91,15 @@
         </div>
       <% end %>
     <% end %>
-    <small class="d-block text-end mt-3">
-      <%= link_to "すべて表示",profile_follower_path %>
-    </small>
+    <% if @follower[0] != nil %>
+      <small class="d-block text-end mt-3">
+        <%= link_to "すべて表示",profile_follower_path %>
+      </small>
+    <% end %>
   </div>
 
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">おすすめユーザー</h6>
-    <% if @users!= nil %>
-      <br>
-      <p class="text-gray-dark">現在はいないようです！</p>
-      <br>
-    <% end %>
     <% @users.shuffle.first(5).each do |user| %>
       <% unless current_user.id == user.id %>
         <% unless current_user.following?(user) %>
