--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -1,26 +1,47 @@
 <%= stylesheet_link_tag "mypages"%>
 
-<div class="header">
-  編集ページ
-</div>
+<script>
+    function previewImage(obj)
+    {
+        var fileReader = new FileReader();
+        fileReader.onload = (function() {
+            document.getElementById('preview').src = fileReader.result;
+        });
+        fileReader.readAsDataURL(obj.files[0]);
+        document.getElementById("image_text").innerHTML = "選択した画像";
+    }
+</script>
+
 
 <p>
-<div class="row">
-<div class="col-md-auto">
-  <%= image_tag 'background2.jpg',class:'myicon' %>
-</div>
-<div class="col-md-auto">
-  <div class="top">
-  <p class="h6">ニックネーム</p>
-  <%= current_user.nickname %><br>
-  <p class="h6">ユーザーID</p>
-  <%= current_user.userid %>
-  </div>
-</div>
-</div>
+
 <div class="mw-100 p-3" style="background-color: #eee;">
   <div class="profile"style="width:auto">
-  <%= form_for @profile, url: mypage_path  do |f| %>
+  <%= form_with model:@profile, url: mypage_path , multipart: true do |f| %>
+
+      <h1>EDIT PAGE</h1>
+
+      <span>現在のアイコン</span>
+
+      <div class="uploader">
+        <div class="form1">
+            <label>
+              <input type="file" name="image" class="image_select"  accept='image/*' style="display: none" onchange="previewImage(this);"  required >
+              <% if @user.image? %>
+                <%= image_tag "/user_images/#{@user.image}",class: "user_icon"%>
+              <% else %>
+                <%= image_tag "default_icon" , class: "user_icon" %>
+              <% end %>
+            </label><br>
+            <p id="image_text">画像を選択してください</p>
+            <p>
+              <img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" style="max-width:200px;">
+            </p>
+
+        </div>
+      </div>
+
+
 
       <div class="m-1">
          学科<br><%= f.select :grade, [["情報処理科1年", "情報処理科1年"],["情報処理科2年", "情報処理科2年"],["実践IoT1年", "実践IoT1年"],["実践IoT2年", "実践IoT2年"],
