--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -1,67 +1,29 @@
-<%= stylesheet_link_tag "mypages"%>
-
-  マイページ
-
 <%= stylesheet_link_tag 'mypages', media: 'all', 'data-turbolinks-track': 'reload' %>
-
-<script>
-    function previewImage(obj)
-    {
-        var fileReader = new FileReader();
-        fileReader.onload = (function() {
-            document.getElementById('preview').src = fileReader.result;
-        });
-        fileReader.readAsDataURL(obj.files[0]);
-        document.getElementById("image_text").innerHTML = "選択した画像";
-    }
-</script>
-
 
 
 <div class="body">
-<h1>アイコン変更</h1>
-
-  <span>現在のアイコン</span>
-
-  <div class="uploader">
-  <div class="form1">
-    <%= form_tag(mypages_path, {multipart: true}) do %>
-  <label>
-    <input type="file" name="image" class="image_select"  accept='image/*' onchange="previewImage(this);"  required >
-<% if @user.image? %>
-  <%= image_tag "/user_images/#{@user.image}",class: "user_icon"%>
-<% else %>
-  <%= image_tag "default_icon" , class: "user_icon" %>
-<% end %>
-   </label><br>
-      <p id="image_text">画像を選択してください</p>
-      <p>
-        <img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" style="max-width:200px;">
-      </p>
-
-    <input type="submit" name="submit" value="保存" class="btn btn--orange">
-
- <% end %>
-  </div>
-</div>
 
 <p>
-   <div class="row">
-         <div class="col-md-auto">
-               <%= image_tag 'background2.jpg',class:'myicon'%>
-         </div>
-         <div class="col-md-auto">
-           <div class="top">
-                     <p class="h6">ニックネーム</p>
-                     <%= current_user.nickname %><br>
-                     <p class="h6">ユーザーID</p>
-                    <%= current_user.userid %>
-          </div>
-         </div>
-   </div>
+
              <div style=background-color:#eee;">
              <div class="m-3"style="width:auto",style="background-color:#eee;">
-                   <%= link_to "編集", edit_mypage_path(current_user.id),class:'btn btn-outline-primary btn-lg m-1'%><br>
+               <h1>MYPAGE</h1>
+               <div class="col-md-auto">
+                 <% if @user.image? %>
+                   <%= image_tag "/user_images/#{@user.image}",class: "user_icon"%>
+                 <% else %>
+                   <%= image_tag "default_icon" , class: "user_icon" %>
+                 <% end %>
+               </div>
+               <div class="col-md-auto">
+                 <div class="top">
+                   <p class="h6">ニックネーム</p>
+                   <%= current_user.nickname %><br>
+                   <p class="h6">ユーザーID</p>
+                   <%= current_user.userid %>
+                 </div>
+               </div>
+
                <div class="m-1">
                学科：<%= @profiles.grade%><br>
                </div>
@@ -77,6 +39,7 @@
                取得資格<br><div class="border border-dark bg-white m-1"><%=  @profiles.accreditation %><br></div>
 
                          タグ、趣味<br><div class="border border-dark bg-white m-1"><%= @profiles.hobby %><br></div>
+               <%= link_to "編集", edit_mypage_path(current_user.id),class:'btn btn-outline-primary btn-lg m-1'%>
                  　　
             </div>
             </div>
