--- a/app/assets/stylesheets/mypages.scss
+++ b/app/assets/stylesheets/mypages.scss
@@ -1,23 +1,11 @@
 // Place all the styles related to the mypages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.header{
-}
-body{
-}
+
 .top{
   position: relative;
-
-
-
 }
-.myicon{
-  width: 120px;
-  height: 120px;
 
-}
-.profile{
-}
-p{
-  top:-80px;
+.background{
+  background-color: #eee;
 }
