いいね非同期完了！

--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,1 @@
-document.getElementById('post_<%= @post.id %>').innerHTML = '<%= j(render "timelines/post", post: @post) %>'
+document.getElementById('post_<%= @post.id %>').innerHTML = '<%= j(render "timelines/post", post: @post,user:@user) %>'
