yurisiさんが変更

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -28,6 +28,8 @@
       </header>
 
       <main class="px-3">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
         <%= yield %>
       </main>
 
