--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -105,10 +105,10 @@
         <% unless current_user.following?(user) %>
           <%= link_to profile_path(user.userid) do%>
             <div class="d-flex text-muted pt-3">
-              <% if current_user.image.nil? %>
-                <%= image_tag "/user_images/default_icon.png" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+              <% if user.image.nil? %>
+                <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
               <% else %>
-                <%= image_tag "/user_images/#{current_user.image}.png" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
+                <%= image_tag "/user_images/#{user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
               <% end %>
                 <p class="pb-3 mb-0 small lh-sm  border-bottom w-100">
                   <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
