--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,10 +6,6 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
           <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "inputEmail", class: "form-control",:placeholder=>"email" ,style: "margin-bottom: 30px" %>
-          <%= f.password_field :password, autocomplete: "new-password", id: "inputEmail", class: "form-control",:placeholder=>"パスワード(8文字以上で設定してください)",style: "margin-bottom: 30px"%>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" , id: "inputEmail", class: "form-control",:placeholder=>"パスワード(確認)",style: "margin-bottom: 30px"%>
-          <%= f.text_field :nickname , id: "inputEmail", class: "form-control",:placeholder=>"ニックネーム",style: "margin-bottom: 30px"%>
-          <%= f.text_field :userid , id: "inputEmail", class: "form-control",:placeholder=>"ユーザーID",style: "margin-bottom: 30px"%>
       <div class="button01">
         <%= f.submit "登録", class:"w-25 btn btn-lg btn-primary"%>
       </div>
@@ -19,4 +15,4 @@
   <div class="links">
   <%= render "devise/shared/links" %>
   </div>
-</div>
+</div>edew
