--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,16 @@
 <%= stylesheet_link_tag 'registrations', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="register">
-  <h2 style= "margin-bottom: 30px">会員登録</h2>
+  <h1 style= "margin-bottom: 30px">会員登録</h1>
 
   <div id="contact_form">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "inputEmail", class: "form-control",:placeholder=>"email" ,style: "margin-bottom: 30px" %>
-      <div class="button01">
-        <%= f.submit "登録", class:"w-25 btn btn-lg btn-primary"%>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "inputEmail", class: "form-control",:placeholder=>"email" ,style: "margin-bottom: 30px" %>
+      <%= f.check_box :agreement_terms %>
+      <%= link_to "利用規約",static_path, target: "_blank", rel: "noopener"%>・<%= link_to "プライバシーポリシー",privacy_path, target: "_blank", rel: "noopener" %>に同意する
+      <br />
+        <div class="button01">
+        <%= f.submit "登録", class:"mt-4 w-25 btn btn-lg btn-primary"%>
       </div>
     <% end %>
   </div>
@@ -15,4 +18,4 @@
   <div class="links">
   <%= render "devise/shared/links" %>
   </div>
-</div>edew
+</div>
