フッターに利用規約を追加

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -34,7 +34,9 @@
       </main>
 
       <footer class="mt-auto text-dark">
-        <p>©Avails Group All rights reserved</p>
+        <p>©Avails Group
+        <%= link_to("利用規約",static_path,class:"text-dark") %>
+        <%= link_to("プライバシーポリシー",privacy_path,class:"text-dark")%></p>
       </footer>
     </div>
   </body>
